# langlistn

./: .env.example  .gitignore  HANDOFF.md  PLAN.md  README.md  langlistn  pyproject.toml
src/langlistn/: __init__.py  __main__.py  app.py  cli_output.py  config.py  diarize.py  display.py  pipeline.py  streaming_asr.py  translate.py
src/langlistn/audio/: __init__.py  mic_capture.py
src/langlistn/realtime/: __init__.py
src/langlistn/tui/: __init__.py
src/langlistn/whisper_local/: __init__.py
swift/: build.sh
swift/AudioCaptureHelper/: Package.swift
swift/AudioCaptureHelper/Sources/: main.swift
