[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langlistn"
version = "0.1.0"
description = "Real-time audio translation and transcription to English"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Jake McInteer"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "websockets>=13.0",
    "sounddevice>=0.5",
    "textual>=3.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
langlistn = "langlistn.__main__:main"

[project.urls]
Homepage = "https://github.com/mcinteerj/langlistn"
