[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langlistn"
version = "0.3.0"
description = "Real-time audio translation to English — runs locally with Whisper on Apple Silicon"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
authors = [{name = "Jake McInteer"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "sounddevice>=0.5",
    "python-dotenv>=1.0",
    "mlx-whisper>=0.4",
    "numpy>=1.26",
    "boto3>=1.34",
    "silero-vad>=5.1",
]

[project.optional-dependencies]


[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
langlistn = "langlistn.__main__:main"

[project.urls]
Homepage = "https://github.com/mcinteerj/langlistn"
